[editor] fix(static-toolbar.scss): remove overflow: hidden take 2

--- a/packages/editor/src/Styles/static-toolbar.scss
+++ b/packages/editor/src/Styles/static-toolbar.scss
@@ -16,5 +16,4 @@
 .scrollableContainer {
   display: flex;
   align-items: center;
-  overflow: hidden;
 }
